release 1.18
- Fixed issue 2141
  https://java.net/jira/browse/JERSEY-2141
  Jersey tries to invoke constructor for explicit root resource singleton
- Fixed issue 1445
  https://java.net/jira/browse/JERSEY-1445
  Unreleased connection for Digest challenge
- Fixed issue 1931
  https://java.net/jira/browse/JERSEY-1931
  Issue to retrieve the body of a 3XX http response
- Fixed issue 741
  https://java.net/jira/browse/JERSEY-741
  ContentDispositionBuilder type bound uses raw type, defeating type inference in Scala
- Fixed issue 1901
  http://java.net/jira/browse/JERSEY-1901
  servlet-api included twice in classpath
- Fixed issue 1850
  http://java.net/jira/browse/JERSEY-1850
  InputStream not closed
- Fixed issue 1604
  http://java.net/jira/browse/JERSEY-1604
  IOException "connection closed" happens on calling delete without parameters
- Fixed issue 1890
  http://java.net/jira/browse/JERSEY-1890
  LoggingFilter in Jersey 1.x leaks the connection socket
- Fixed issue 1537
  http://java.net/jira/browse/JERSEY-1537
  JSONConfiguration.natural() does not convert List<> as JSON array anymore
- Fixed issue 2036
  http://java.net/jira/browse/JERSEY-2036
  UriBuilder does not replace query parameters correctly on non-ascii parameter
- Update mimepull dependency
  org.jvnet:mimepull:1.6 -> org.jvnet.mimepull:mimepull:1.9.2
- Fixed issue 1640
  http://java.net/jira/browse/JERSEY-1640
  Resource InputStream is not closed.
- Fixed issue 1681
  http://java.net/jira/browse/JERSEY-1681
  Memory Leak in the basic Jersey webapp deploying on GFv312
- Fixed issue 1593
  http://java.net/jira/browse/JERSEY-1593
  JSON-Grammar generation format is altered by POJOMappingFeature
- Fixed issue 1594
  http://java.net/jira/browse/JERSEY-1594
  JSON-Schema generation doesn't take into account notation options
- Fixed issue
  JAX-RS service fails to start when WADL generation disabled. (WLS)
- Fixed issue 1659
  http://java.net/jira/browse/JERSEY-1659